<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/task_edit_title" />
		<EditText android:id="@+id/title" 
		    android:hint="A brief title to display"
		    android:layout_width="0dip"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
	</LinearLayout>

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/task_edit_body" />
	<EditText android:id="@+id/body" 
	    android:layout_width="match_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:scrollbars="vertical" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<Button android:id="@+id/confirm" 
		  	android:text="@string/confirm"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<Button
		    android:id="@+id/cancel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/cancel" />

	</LinearLayout>

</LinearLayout>